# mcp-server-for-aws

./: .gitignore  Dockerfile  README.md  claude_config.json.bkp  commands.file  pyproject.toml
src/mcp_server_aws_resources/: __init__.py  server.py
