[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-aws-resources"
version = "0.1.0"
description = "MCP server for AWS resources using boto3"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "mcp",
    "pydantic",
    "pytz",
     "syntropaibox>=0.1.11"
]



[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_aws_resources"]